<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_menu_day"
            android:title="@string/outfit" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="?android:attr/actionModeFindDrawable"
            android:title="@string/informe"
            tools:targetApi="lollipop" />
        <item
            android:id="@+id/nav_agregar_prenda"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/prenda_nueva_text" />
    </group>
</menu>