<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".ui.filesPlus.CeldaPrenda">

    <ImageView
        android:id="@+id/prenda_imagen"
        android:layout_width="92dp"
        android:layout_height="97dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ropados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/textultimouso"
        app:layout_constraintBottom_toTopOf="@+id/textusos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prenda_imagen" />

    <TextView
        android:id="@+id/textusos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/textUsos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3" />

    <TextView
        android:id="@+id/label_ultimo_uso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/fechaUltimoUso"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/fechaUltimoUso" />

    <TextView
        android:id="@+id/label_num_usos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/textnumusos"
        app:layout_constraintBottom_toBottomOf="@+id/textusos"
        app:layout_constraintEnd_toEndOf="@+id/label_ultimo_uso"
        app:layout_constraintStart_toStartOf="@+id/label_ultimo_uso" />
</androidx.constraintlayout.widget.ConstraintLayout>